<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_continue">Continue</string>
    <string name="action_got_it">Got it</string>
    <string name="action_report_an_issue">Report an issue</string>
    <string name="action_upload_done">Done</string>
    <string name="action_upload_your_data">Upload your data</string>
    <string name="action_verify_invalid_pin">Invalid PIN number, please ask the health official to send you another PIN.</string>
    <string name="action_verify_upload_pin">Upload my data</string>
    <string name="activity_self_isolation_button">Done</string>
    <string name="activity_self_isolation_content">"You’vehave successfully uploaded our information to COVIDSafe`s highly secure server

.State and Territory health officials will notify other COVIDSafe users that have recorded instances of close contact with you. Your identity will remain anonymous to other users."</string>
    <string name="activity_self_isolation_headline">Thank you! You have helped to stop the spread of COVID-19!</string>
    <string name="app_name">COVIDSafe</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build_config_package">au.gov.health.covidsafe</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="data_privacy_button">Next</string>
    <string name="data_privacy_content">It is important that you read the COVIDSafe <a href="https://www.health.gov.au/using-our-websites/privacy/privacy-notice-for-covidsafe-app">Privacy Policy</a>" before you register for COVIDSafe.

If you are under 16 years of age, your parent/guardian must also read the "<a href="https://www.health.gov.au/using-our-websites/privacy/privacy-notice-for-covidsafe-app">Privacy Policy</a>".

Use of COVIDSafe is completely voluntary. You can install or delete the application at any time. If you delete COVIDSafe, "<a href="https://www.covidsafe.gov.au/help-topics.html">you may also ask for your information</a>" to be deleted from the secure server.

To register for COVIDSafe, you will need to enter your name (or a pseudonym), mobile number, age range and postcode.

Information you submit when you register, and information about your use of COVIDSafe will be collected and stored on a highly secure server.

COVIDSafe will not collect your location information.

COVIDSafe will note the time of contact and an anonymous ID code to identify you on the devices of other COVIDSafe users you come into contact with.

Other COVIDSafe users you come into contact with will record an anonymous ID code and the time of contact for tracing purposes.

If another user tests positive to COVID-19, they may upload their contact information and a State or Territory health official may contact you for tracing purposes.

Your registration details will only be used or disclosed for contact tracing and for the proper and lawful functioning of COVIDSafe.

More information is available at the "<a href="https://www.health.gov.au/">Australian Government Department of Health website</a>".

See the COVIDSafe "<a href="https://www.health.gov.au/using-our-websites/privacy/privacy-notice-for-covidsafe-app">Privacy Policy</a> for further details about your rights about your information and how it will be handled and shared.</string>
    <string name="data_privacy_headline">Registration and privacy</string>
    <string name="dialog_error_uploading_message">An error occurred while uploading your data, please try again.</string>
    <string name="dialog_error_uploading_negative">Cancel</string>
    <string name="dialog_error_uploading_positive">Try again</string>
    <string name="dialog_error_uploading_title">Upload error</string>
    <string name="dialog_uploading">Uploading your information</string>
    <string name="dialog_uploading_message">Please do not close the app while your information is being uploaded.</string>
    <string name="enter_number_button">Get PIN</string>
    <string name="enter_number_content">We’ll send you a six-digit pin to verify your mobile number.</string>
    <string name="enter_number_headline">Enter your mobile number</string>
    <string name="enter_number_prefix">+61</string>
    <string name="enter_number_relative">"Signing up on behalf of a friend or relative?

They will need to sign up using their device and phone number so that COVIDSafe can work for them."</string>
    <string name="enter_pin_button">Verify</string>
    <string name="enter_pin_headline" formatted="false">Enter the PIN that was sent to %s %s</string>
    <string name="enter_pin_invalid_pin">Invalid PIN number</string>
    <string name="enter_pin_resend_pin">Resend PIN</string>
    <string name="enter_pin_timer_expire">Your code will expire in  </string>
    <string name="enter_pin_wrong_number">Wrong number?</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="feedback_email_address_required">Email address (Required)</string>
    <string name="feedback_found_an_issue_in_the_covidsafe_app">Found an issue in the COVIDSafe app?</string>
    <string name="feedback_please_describe_an_issue">Please describe an issue</string>
    <string name="feedback_we_may_reach_out_to_you_for_further_details_about_your_feedback">"We may reach out to you for further details about your feedback.
Your email address won`t be used for any other purpose."</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="generic_error">Please try again later</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_app_permission_status">App permission status</string>
    <string name="home_been_tested_button">Upload my data</string>
    <string name="home_been_tested_title">Has a health official asked you to upload your data?</string>
    <string name="home_bluetooth_permission">Bluetooth: %s</string>
    <string name="home_data_active_message">There is nothing else you need to do except to leave the app running and keep Bluetooth® on</string>
    <string name="home_data_active_title">COVIDSafe is active</string>
    <string name="home_data_has_been_uploaded">Your data has been uploaded</string>
    <string name="home_data_has_been_uploaded_message">You’re helping stop the spread of COVID-19 by uploading your data daily while in self-isolation.</string>
    <string name="home_data_uploaded">Register for self isolation</string>
    <string name="home_data_uploaded_button">Register</string>
    <string name="home_data_uploaded_message">Help stop the spread of COVID-19 and track your symptoms.</string>
    <string name="home_location_permission">Location: %s</string>
    <string name="home_non_battery_optimization_permission">Battery optimization: %s</string>
    <string name="home_permission_off">Off</string>
    <string name="home_permission_on">On</string>
    <string name="home_push_notification_permission">Push Notification: %s</string>
    <string name="home_set_complete_disclaimer_content">For more help, see our <a href="https://www.covidsafe.gov.au/help-topics.html">FAQ</a>.</string>
    <string name="home_set_complete_disclaimer_title">"Let's stop the spread of COVID-19."</string>
    <string name="invalid_age">Age cannot be empty</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_post_code">Invalid postcode</string>
    <string name="personal_details_age_hint">Age</string>
    <string name="personal_details_age_title">Your age</string>
    <string name="personal_details_disclaimer"><a href="https://www.health.gov.au/using-our-websites/privacy/privacy-notice-for-covidsafe-app">Privacy Policy</a></string>
    <string name="personal_details_headline">Enter your details to sign up</string>
    <string name="personal_details_name_hint">Firstname Surname</string>
    <string name="personal_details_name_title">Full name</string>
    <string name="personal_details_post_code">Postcode</string>
    <string name="personal_details_post_code_hint">e.g. 2000</string>
    <string name="registration_consent_checkbox">I consent</string>
    <string name="registration_consent_content">I consent to the Australian Department of Health collecting:</string>
    <string name="registration_consent_first_paragraph">My registration information to allow contact tracing by State and Territory Health officials.</string>
    <string name="registration_consent_headline">Registration consent</string>
    <string name="registration_consent_second_paragraph">My contact information from other COVIDSafe users after they test positive for COVID-19.</string>
    <string name="upload_consent">I consent to upload my information</string>
    <string name="upload_step_4_header">Upload consent</string>
    <string name="upload_step_4_sub_header">"You have tested positive for COVID-19.

Unless you consent, your contact data will not be uploaded.

If you consent, your contact information will be uploaded and shared with State or Territory health officials for contact tracing purposes.

Read the COVIDSafe "<a href="https://www.health.gov.au/using-our-websites/privacy/privacy-notice-for-covidsafe-app">Privacy Policy</a> for further details.</string>
</resources>