<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/keyline_5" android:paddingEnd="@dimen/keyline_5">
        <ImageView android:id="@id/personal_details_picture" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_personal_details" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="?textAppearanceHeadline2" android:id="@id/personal_details_headline" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_6" android:text="@string/personal_details_headline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_picture" />
        <TextView android:textAppearance="?textAppearanceBody1" android:id="@id/personal_details_name_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/personal_details_name_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_headline" />
        <EditText android:textSize="@dimen/text_body_small" android:textColor="@color/slack_black" android:textColorHighlight="@color/dark_cerulean_3" android:id="@id/personal_details_name" android:background="@drawable/edit_text_background" android:layout_width="0.0dip" android:layout_height="@dimen/text_field_height" android:layout_marginTop="@dimen/keyline_1" android:hint="@string/personal_details_name_hint" android:maxLines="1" android:singleLine="true" android:inputType="textPersonName" android:textCursorDrawable="@null" android:paddingStart="@dimen/keyline_1" android:paddingEnd="@dimen/keyline_1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_name_title" />
        <TextView android:textColor="@color/error" android:id="@id/personal_details_name_error" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="24.0dip" android:layout_marginTop="@dimen/keyline_1" android:text="@string/invalid_name" app:layout_constraintStart_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_name" />
        <androidx.constraintlayout.widget.Barrier android:id="@id/personal_details_name_barrier" android:layout_width="fill_parent" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="personal_details_name,personal_details_name_error" />
        <TextView android:textAppearance="?textAppearanceBody1" android:id="@id/personal_details_age_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/personal_details_age_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_name_barrier" />
        <TextView android:textSize="@dimen/text_body_small" android:textColor="@color/slack_black" android:textColorHighlight="@color/dark_cerulean_3" android:gravity="center_vertical" android:id="@id/personal_details_age" android:background="@drawable/edit_text_background" android:layout_width="0.0dip" android:layout_height="@dimen/text_field_height" android:layout_marginTop="@dimen/keyline_1" android:hint="@string/personal_details_age_hint" android:textCursorDrawable="@null" android:paddingStart="@dimen/keyline_1" android:paddingEnd="@dimen/keyline_1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_age_title" />
        <TextView android:textColor="@color/error" android:id="@id/personal_details_age_error" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="24.0dip" android:layout_marginTop="@dimen/keyline_1" android:text="@string/invalid_age" app:layout_constraintStart_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_age" />
        <androidx.constraintlayout.widget.Barrier android:id="@id/personal_details_age_barrier" android:layout_width="fill_parent" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="personal_details_age,personal_details_age_error" />
        <TextView android:textAppearance="?textAppearanceBody1" android:id="@id/personal_details_post_code_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/personal_details_post_code" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_age_barrier" />
        <EditText android:textSize="@dimen/text_body_small" android:textColor="@color/slack_black" android:textColorHighlight="@color/dark_cerulean_3" android:gravity="center_vertical" android:id="@id/personal_details_post_code" android:background="@drawable/edit_text_background" android:layout_width="0.0dip" android:layout_height="@dimen/text_field_height" android:layout_marginTop="@dimen/keyline_1" android:hint="@string/personal_details_post_code_hint" android:maxLength="4" android:digits="\ 0123456789" android:inputType="number" android:textCursorDrawable="@null" android:paddingStart="@dimen/keyline_1" android:paddingEnd="@dimen/keyline_1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_post_code_title" />
        <TextView android:textColor="@color/error" android:id="@id/personal_details_post_code_error" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="24.0dip" android:layout_marginTop="@dimen/keyline_1" android:text="@string/invalid_post_code" app:layout_constraintStart_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_post_code" />
        <androidx.constraintlayout.widget.Barrier android:id="@id/personal_details_barrier" android:layout_width="fill_parent" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="personal_details_post_code,personal_details_post_code_error" />
        <androidx.appcompat.widget.AppCompatTextView android:textColorLink="@color/hyperlink_enabled" android:id="@id/personal_details_disclaimer" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/personal_details_disclaimer" app:layout_constraintStart_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/personal_details_barrier" style="?textAppearanceBody2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>