<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/root" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?textAppearanceHeadline2" android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_step_4_header" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" />
        <TextView android:id="@id/subHeader" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_step_4_sub_header" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" style="?textAppearanceBody2" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@id/upload_consent_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_consent" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" style="?textAppearanceBody2" />
    </LinearLayout>
</ScrollView>