<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/keyline_5" android:paddingEnd="@dimen/keyline_5">
        <ImageView android:id="@id/registration_consent_picture" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_privacy" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="?textAppearanceHeadline2" android:id="@id/registration_consent_headline" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_6" android:text="@string/registration_consent_headline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/registration_consent_picture" />
        <TextView android:textAppearance="?textAppearanceBody1" android:textColorLink="@color/hyperlink_enabled" android:id="@id/registration_consent_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/registration_consent_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/registration_consent_headline" />
        <au.gov.health.covidsafe.ui.view.UlView android:textAppearance="?textAppearanceBody1" android:textColorLink="@color/hyperlink_enabled" android:id="@id/registration_consent_first_paragraph" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/registration_consent_text" app:ul_view_text="@string/registration_consent_first_paragraph" />
        <au.gov.health.covidsafe.ui.view.UlView android:textAppearance="?textAppearanceBody1" android:textColorLink="@color/hyperlink_enabled" android:id="@id/registration_consent_second_paragraph" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/registration_consent_first_paragraph" app:ul_view_text="@string/registration_consent_second_paragraph" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@id/registration_consent_checkbox" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/registration_consent_checkbox" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/registration_consent_second_paragraph" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>